Fix overflow on filter form

--- a/pegasus/metrics/static/style.css
+++ b/pegasus/metrics/static/style.css
@@ -76,6 +76,7 @@ h2 {
     padding: 10px;
     border-radius: 10px;
     border: 1px solid #888;
+    overflow: auto;
 }
 
 .flash_message {
